--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,3 +7,16 @@
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+::-webkit-scrollbar {
+    width: 10px; /* Largura da barra de rolagem */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #333; /* Cor do polegar (o botão deslizante) */
+    border-radius: 2px; /* Borda arredondada do polegar */
+}
+
+::-webkit-scrollbar-track {
+    background-color: #888; /* Cor de fundo da barra de rolagem */
+}
